Done HTML markup

--- a/index.html
+++ b/index.html
@@ -15,4 +15,192 @@
     ></script>
     <title>Chef Gordon Portfolio</title>
   </head>
+  <body>
+    <div class="container">
+      <div class="navigation">
+        <ul class="nav_menu_left">
+          <li><a href="#">Recipies</a></li>
+          <li><a href="#">Solution</a></li>
+          <li><a href="#">Fres Ideas</a></li>
+        </ul>
+
+        <div class="logo_txt">
+          <h1>Chef Gordon</h1>
+        </div>
+        <ul class="nav_menu_right">
+          <li><a href="#">Newsletter</a></li>
+          <li class="gold_btn"><a href="#">Conect with me</a></li>
+        </ul>
+      </div>
+      <header>
+        <div class="video-container">
+          <video autoplay loop muted>
+            <source src="img/bg_video.mp4" type="video/mp4" />
+            <p>Your browser doesn't support HTML video.</p>
+          </video>
+          <div class="overlay-desc">
+            <h1>Imagine the delicious opportunities</h1>
+            <div class="cta_btn_container">
+              <a href="#" class="cta_btn">Learn more</a>
+            </div>
+          </div>
+        </div>
+      </header>
+      <section class="first_container">
+        <div class="h2_cont">
+          <h2>This is magic in the making</h2>
+        </div>
+
+        <div class="content_container">
+          <div class="solutions all_items_first_cont">
+            <img
+              class="food"
+              src="https://source.unsplash.com/500x500/?food,cooking"
+              alt="/collaboration"
+            />
+            <h3 class="h3_style">Solution</h3>
+            <p>
+              Let’s make something good together. Team up with me and get the
+              great-tasting tools you need to breathe life into your business.
+            </p>
+            <a href="#" class="cta_text">Browse solution →</a>
+          </div>
+          <div class="fresh_ideas all_items_first_cont">
+            <img
+              class="food"
+              src="https://source.unsplash.com/500x499/?food,cooking"
+              alt="/collaboration"
+            />
+
+            <h3 class="h3_style">Fresh ideas</h3>
+            <p>
+              Stay up-to-date with the most innovative tips,unique cooking
+              techniques, culinary concepts tricks, and trends in foodservice.
+            </p>
+
+            <a href="#" class="cta_text">See what's new →</a>
+          </div>
+
+          <div class="get_inspired all_items_first_cont">
+            <img
+              class="food"
+              src="https://source.unsplash.com/500x498/?food,cooking"
+              alt="/collaboration"
+            />
+
+            <h3 class="h3_style">Get inspired</h3>
+
+            <p>
+              Bring dynamic flavors and better-for-you ingredients to the table
+              with recipes carefully crafted by Gordon chef.
+            </p>
+
+            <a href="#" class="cta_text">Explore Recipes →</a>
+          </div>
+        </div>
+      </section>
+      <section class="second_container">
+        <div class="h2_cont">
+          <h2>Any season, any time</h2>
+        </div>
+        <div class="season_container">
+          <div class="dish_one_container">
+            <div>
+              <img
+                class="img_sec_cont"
+                src="https://source.unsplash.com/500x500/?food,lunch"
+              />
+            </div>
+            <div class="text_container_h5">
+              <h5>Creamy Miso Mushroom Soup</h5>
+            </div>
+            <div class="text_container_p">
+              <p>Medium / Lunch /Soups & Stews</p>
+            </div>
+          </div>
+          <div class="dish_two_container dish_one_container">
+            <div>
+              <img
+                class="img_sec_cont"
+                src="https://source.unsplash.com/500x499/?food,soup"
+              />
+            </div>
+            <div class="text_container_h5">
+              <h5>Mediterranean Ranch</h5>
+            </div>
+            <div class="text_container_p">
+              <p>Easy / Lunch / Dressings</p>
+            </div>
+          </div>
+          <div class="dish_three_container dish_one_container">
+            <div>
+              <img
+                class="img_sec_cont"
+                src="https://source.unsplash.com/500x498/?food,Chocolate"
+              />
+            </div>
+            <div class="text_container_h5">
+              <h5>Chocolate Banana Bread</h5>
+            </div>
+            <div class="text_container_p">
+              <p>Medium / Breakfast / Small Plates</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <form class="form_container">
+        <div class="news_container">
+          <div class="newsletter_container">
+            <h2 class="h2_cont">Sign up for our foodservice newsletter</h2>
+            <p>
+              Get insider access to news around the innovations, unique cooking
+              techniques, culinary concepts, insights, and more.
+            </p>
+            <div class="newsletter" id="newsletter_href">
+              <input
+                type="text"
+                placeholder="First name*"
+                name="f_name"
+                required
+              />
+              <input
+                type="text"
+                placeholder="Last name*"
+                name="l_name"
+                required
+              />
+              <input type="text" placeholder="E-mail" name="mail" required />
+            </div>
+            <button class="sub_btn">Sing up</button>
+          </div>
+        </div>
+      </form>
+      <footer>
+        <div class="footer_bar">
+          <ul class="footer_list_left">
+            <li><a href="#">© Chef Gordon Portfolio 2019</a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+          </ul>
+          <ul class="footer_list_right">
+            <li>
+              <a href="#"><i class="fab fa-facebook-square fa-3x"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-instagram fa-3x"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-twitter-square fa-3x"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-youtube-square fa-3x"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-linkedin fa-3x"></i></a>
+            </li>
+          </ul>
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
