Added class to second container items in HTML

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <h2>Any season, any time</h2>
         </div>
         <div class="season_container">
-          <div class="dish_one_container">
+          <div class="dish_one_container all_items_second_cont">
             <div>
               <img
                 class="img_sec_cont"
@@ -118,7 +118,7 @@
               <p>Medium / Lunch /Soups & Stews</p>
             </div>
           </div>
-          <div class="dish_two_container dish_one_container">
+          <div class="dish_two_container all_items_second_cont">
             <div>
               <img
                 class="img_sec_cont"
@@ -132,7 +132,7 @@
               <p>Easy / Lunch / Dressings</p>
             </div>
           </div>
-          <div class="dish_three_container dish_one_container">
+          <div class="dish_three_container all_items_second_cont">
             <div>
               <img
                 class="img_sec_cont"
