--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <ul class="nav_menu_left">
           <li><a href="#">Recipies</a></li>
           <li><a href="#">Solution</a></li>
-          <li><a href="#">Fres Ideas</a></li>
+          <li><a href="#">Fresh Ideas</a></li>
         </ul>
 
         <div class="logo_txt">
@@ -151,7 +151,7 @@
       <form class="form_container">
         <div class="news_container">
           <div class="newsletter_container">
-            <h2 class="h2_cont">Sign up for our foodservice newsletter</h2>
+            <h2 class="h2_cont">Sign up for my newsletter</h2>
             <p>
               Get insider access to news around the innovations, unique cooking
               techniques, culinary concepts, insights, and more.
