--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <link rel="icon" href="img/favicon.ico" />
     <link
       href="https://fonts.googleapis.com/css?family=Abril+Fatface|Lato&display=swap"
       rel="stylesheet"
