Changed button disc for sing in

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <ul class="nav_menu_right">
           <li><a href="#">Newsletter</a></li>
-          <li class="gold_btn"><a href="#">Conect with me</a></li>
+          <li class="gold_btn"><a href="#">Sign in</a></li>
         </ul>
       </div>
       <header>
