Added sing up and About buttons

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
         </div>
         <ul class="nav_menu_right">
           <li><a href="#">Newsletter</a></li>
+          <li><a href="#">About</a></li>
           <li class="gold_btn"><a href="#">Sign in</a></li>
+          <li class="gold_btn"><a href="#">Sign up</a></li>
         </ul>
       </div>
       <header>
