Added href scroll for recipies

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="container">
       <div class="navigation">
         <ul class="nav_menu_left">
-          <li><a href="#">Recipies</a></li>
+          <li><a href="#recipies">Recipies</a></li>
           <li><a href="#">Solution</a></li>
           <li><a href="#">Fresh Ideas</a></li>
         </ul>
@@ -97,7 +97,7 @@
               Bring dynamic flavors and better-for-you ingredients to the table
               with recipes carefully crafted by Gordon chef.
             </p>
-
+            <div id="recipies"></div>
             <a href="#" class="cta_text">Explore Recipes →</a>
           </div>
         </div>
