Added href scroll for solutions

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="navigation">
         <ul class="nav_menu_left">
           <li><a href="#recipies">Recipies</a></li>
-          <li><a href="#">Solution</a></li>
+          <li><a href="#solution">Solution</a></li>
           <li><a href="#">Fresh Ideas</a></li>
         </ul>
 
@@ -46,6 +46,7 @@
             <div class="cta_btn_container">
               <a href="#" class="cta_btn">Learn more</a>
             </div>
+            <div id="solution"></div>
           </div>
         </div>
       </header>
