--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
         <ul class="nav_menu_left">
           <li><a href="#recipies">Recipies</a></li>
           <li><a href="#solution">Solution</a></li>
-          <li><a href="#">Fresh Ideas</a></li>
+          <li><a href="#solution">Fresh Ideas</a></li>
         </ul>
 
         <div class="logo_txt">
           <h1>Chef Gordon</h1>
         </div>
         <ul class="nav_menu_right">
-          <li><a href="#">Newsletter</a></li>
+          <li><a href="#newsletter_href">Newsletter</a></li>
           <li><a href="#">About</a></li>
           <li class="gold_btn sing_in"><a href="#">Sing in</a></li>
           <li class="gold_btn sing_up"><a href="#">Sing up</a></li>
