--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
             <p>Your browser doesn't support HTML video.</p>
           </video>
           <div class="overlay-desc">
-            <h1>Imagine the delicious opportunities</h1>
+            <h1>Chefs portfolios</h1>
+            <h2>Imagine the delicious opportunities</h2>
             <div class="cta_btn_container">
               <a href="#" class="cta_btn">Learn more</a>
             </div>
