Added version with logo

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </ul>
 
         <div class="logo_txt">
-          <h1>Chef Gordon</h1>
+          <!-- <h1>Chef Gordon</h1> -->
         </div>
         <ul class="nav_menu_right">
           <li><a href="#newsletter_href">Newsletter</a></li>
@@ -61,7 +61,7 @@
             <img
               class="food"
               src="https://source.unsplash.com/500x500/?food,cooking"
-              alt="/collaboration"
+              alt="food"
             />
             <h3 class="h3_style">Solution</h3>
             <p>
@@ -74,7 +74,7 @@
             <img
               class="food"
               src="https://source.unsplash.com/500x499/?food,cooking"
-              alt="/collaboration"
+              alt="food"
             />
 
             <h3 class="h3_style">Fresh ideas</h3>
@@ -90,7 +90,7 @@
             <img
               class="food"
               src="https://source.unsplash.com/500x498/?food,cooking"
-              alt="/collaboration"
+              alt="food"
             />
 
             <h3 class="h3_style">Get inspired</h3>
