--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <div class="navigation">
         <ul class="nav_menu_left">
           <li><a href="#recipies">Recipies</a></li>
-          <li><a href="#solution">Solution</a></li>
-          <li><a href="#solution">Fresh Ideas</a></li>
+          <li><a href="#solution_scroll">Solution</a></li>
+          <li><a href="#fresh_scroll">Fresh Ideas</a></li>
         </ul>
 
         <div class="logo_txt">
@@ -47,7 +47,8 @@
             <div class="cta_btn_container">
               <a href="#" class="cta_btn">Learn more</a>
             </div>
-            <div id="solution"></div>
+            <div id="fresh_scroll"></div>
+            <div id="solution_scroll"></div>
           </div>
         </div>
       </header>
