--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <ul class="nav_menu_right">
           <li><a href="#newsletter_href">Newsletter</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="/about.html">About</a></li>
           <li class="gold_btn sing_in"><a href="#">Sign in</a></li>
           <li class="gold_btn sing_up"><a href="#">Sign up</a></li>
         </ul>
