Added faces img to HTML

--- a/about.html
+++ b/about.html
@@ -43,29 +43,57 @@
           deserunt distinctio?
         </h1>
         <div class="developers_container">
-          <div class="developer_one">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Necessitatibus dolore velit aliquid blanditiis, delectus quo eius
-            officiis minima ipsa asperiores consequuntur iure itaque ab officia
-            harum laborum praesentium magnam dolor.
+          <div class="developer_one developer_items">
+            <img
+              class="food"
+              src="https://source.unsplash.com/185x185/?human,face"
+              alt="food"
+            />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Necessitatibus dolore velit aliquid blanditiis, delectus quo eius
+              officiis minima ipsa asperiores consequuntur iure itaque ab
+              officia harum laborum praesentium magnam dolor.
+            </p>
           </div>
-          <div class="developer_two">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Necessitatibus dolore velit aliquid blanditiis, delectus quo eius
-            officiis minima ipsa asperiores consequuntur iure itaque ab officia
-            harum laborum praesentium magnam dolor.
+          <div class="developer_two developer_items">
+            <img
+              class="food"
+              src="https://source.unsplash.com/185x185/?human,face"
+              alt="food"
+            />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Necessitatibus dolore velit aliquid blanditiis, delectus quo eius
+              officiis minima ipsa asperiores consequuntur iure itaque ab
+              officia harum laborum praesentium magnam dolor.
+            </p>
           </div>
-          <div class="developer_three">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Necessitatibus dolore velit aliquid blanditiis, delectus quo eius
-            officiis minima ipsa asperiores consequuntur iure itaque ab officia
-            harum laborum praesentium magnam dolor.
+          <div class="developer_three developer_items">
+            <img
+              class="food"
+              src="https://source.unsplash.com/185x185/?human,face"
+              alt="food"
+            />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Necessitatibus dolore velit aliquid blanditiis, delectus quo eius
+              officiis minima ipsa asperiores consequuntur iure itaque ab
+              officia harum laborum praesentium magnam dolor.
+            </p>
           </div>
-          <div class="developer_four">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Necessitatibus dolore velit aliquid blanditiis, delectus quo eius
-            officiis minima ipsa asperiores consequuntur iure itaque ab officia
-            harum laborum praesentium magnam dolor.
+          <div class="developer_four developer_items">
+            <img
+              class="food"
+              src="https://source.unsplash.com/185x185/?human,face"
+              alt="food"
+            />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Necessitatibus dolore velit aliquid blanditiis, delectus quo eius
+              officiis minima ipsa asperiores consequuntur iure itaque ab
+              officia harum laborum praesentium magnam dolor.
+            </p>
           </div>
         </div>
       </div>
