Added style to images and margin top faces

--- a/about.html
+++ b/about.html
@@ -49,12 +49,8 @@
               src="https://source.unsplash.com/185x185/?human,face"
               alt="food"
             />
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Necessitatibus dolore velit aliquid blanditiis, delectus quo eius
-              officiis minima ipsa asperiores consequuntur iure itaque ab
-              officia harum laborum praesentium magnam dolor.
-            </p>
+            <div class="person_name">Name</div>
+            <div class="person_position">Executive Chairman</div>
           </div>
           <div class="developer_two developer_items">
             <img
@@ -62,12 +58,8 @@
               src="https://source.unsplash.com/185x185/?human,face"
               alt="food"
             />
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Necessitatibus dolore velit aliquid blanditiis, delectus quo eius
-              officiis minima ipsa asperiores consequuntur iure itaque ab
-              officia harum laborum praesentium magnam dolor.
-            </p>
+            <div class="person_name">Name</div>
+            <div class="person_position">Executive Chairman</div>
           </div>
           <div class="developer_three developer_items">
             <img
@@ -75,12 +67,8 @@
               src="https://source.unsplash.com/185x185/?human,face"
               alt="food"
             />
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Necessitatibus dolore velit aliquid blanditiis, delectus quo eius
-              officiis minima ipsa asperiores consequuntur iure itaque ab
-              officia harum laborum praesentium magnam dolor.
-            </p>
+            <div class="person_name">Name</div>
+            <div class="person_position">Executive Chairman</div>
           </div>
           <div class="developer_four developer_items">
             <img
@@ -88,12 +76,8 @@
               src="https://source.unsplash.com/185x185/?human,face"
               alt="food"
             />
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Necessitatibus dolore velit aliquid blanditiis, delectus quo eius
-              officiis minima ipsa asperiores consequuntur iure itaque ab
-              officia harum laborum praesentium magnam dolor.
-            </p>
+            <div class="person_name">Wiktor</div>
+            <div class="person_position">Executive Chairman</div>
           </div>
         </div>
       </div>
