Added section img for team HTML

--- a/about.html
+++ b/about.html
@@ -37,11 +37,23 @@
         </ul>
       </div>
       <div class="content_main">
+        <div class="img_team_container">
+          <img
+            src="https://source.unsplash.com/1000x565/?teamwork,it"
+            alt="food"
+          />
+        </div>
         <h1>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora,
-          dolorum! Ratione enim unde saepe accusamus, dicta voluptatem provident
-          deserunt distinctio?
+          Developer's Team
         </h1>
+        <p>
+          Netguru builds software products that let people do things
+          differently. Many wheels must go round smoothly to deliver the
+          intended goal, these necessary wheels are our departments and people.
+          Each of us is different. Thanks to this, we can complement each other
+          while aiming for the common goal. We know how to be the team, that is
+          our greatest strength. Let's get to know each other!
+        </p>
         <div class="developers_container">
           <div class="developer_one developer_items">
             <img
