Added style to img header and text inside

--- a/about.html
+++ b/about.html
@@ -38,58 +38,65 @@
       </div>
       <div class="content_main">
         <div class="img_team_container">
-          <img
-            src="https://source.unsplash.com/1000x565/?teamwork,it"
-            alt="food"
-          />
+          <img src="/img/team_header.jpg" alt="team" />
+          <div class="team_description">
+            <p>Meet talent & experience, meet the team</p>
+            <p>
+              Diversity of people, knowledge, and experience. Shared values,
+              culture, and goals. Thanks to them we are a unique team. The team,
+              that is our greatest strength.
+            </p>
+          </div>
         </div>
-        <h1>
-          Developer's Team
-        </h1>
-        <p>
-          Netguru builds software products that let people do things
-          differently. Many wheels must go round smoothly to deliver the
-          intended goal, these necessary wheels are our departments and people.
-          Each of us is different. Thanks to this, we can complement each other
-          while aiming for the common goal. We know how to be the team, that is
-          our greatest strength. Let's get to know each other!
-        </p>
-        <div class="developers_container">
-          <div class="developer_one developer_items">
-            <img
-              class="food"
-              src="https://source.unsplash.com/185x185/?human,face"
-              alt="food"
-            />
-            <div class="person_name">Name</div>
-            <div class="person_position">Executive Chairman</div>
-          </div>
-          <div class="developer_two developer_items">
-            <img
-              class="food"
-              src="https://source.unsplash.com/185x185/?human,face"
-              alt="food"
-            />
-            <div class="person_name">Name</div>
-            <div class="person_position">Executive Chairman</div>
-          </div>
-          <div class="developer_three developer_items">
-            <img
-              class="food"
-              src="https://source.unsplash.com/185x185/?human,face"
-              alt="food"
-            />
-            <div class="person_name">Name</div>
-            <div class="person_position">Executive Chairman</div>
-          </div>
-          <div class="developer_four developer_items">
-            <img
-              class="food"
-              src="https://source.unsplash.com/185x185/?human,face"
-              alt="food"
-            />
-            <div class="person_name">Wiktor</div>
-            <div class="person_position">Executive Chairman</div>
+        <div class="wrapper">
+          <h1>
+            Developer's Team
+          </h1>
+          <p>
+            Developer's Team builds software products that let people do things
+            differently. Many wheels must go round smoothly to deliver the
+            intended goal, these necessary wheels are our departments and
+            people. Each of us is different. Thanks to this, we can complement
+            each other while aiming for the common goal. We know how to be the
+            team, that is our greatest strength. Let's get to know each other!
+          </p>
+          <div class="developers_container">
+            <div class="developer_one developer_items">
+              <img
+                class="food"
+                src="https://source.unsplash.com/185x185/?human,face"
+                alt="food"
+              />
+              <div class="person_name">Name</div>
+              <div class="person_position">Executive Chairman</div>
+            </div>
+            <div class="developer_two developer_items">
+              <img
+                class="food"
+                src="https://source.unsplash.com/185x185/?human,face"
+                alt="food"
+              />
+              <div class="person_name">Name</div>
+              <div class="person_position">Executive Chairman</div>
+            </div>
+            <div class="developer_three developer_items">
+              <img
+                class="food"
+                src="https://source.unsplash.com/185x185/?human,face"
+                alt="food"
+              />
+              <div class="person_name">Name</div>
+              <div class="person_position">Executive Chairman</div>
+            </div>
+            <div class="developer_four developer_items">
+              <img
+                class="food"
+                src="https://source.unsplash.com/185x185/?human,face"
+                alt="food"
+              />
+              <div class="person_name">Wiktor</div>
+              <div class="person_position">Executive Chairman</div>
+            </div>
           </div>
         </div>
       </div>
