Added wrapper to developers section and marings top/bot

--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
                 src="https://source.unsplash.com/185x185/?human,face"
                 alt="food"
               />
-              <div class="person_name">Wiktor</div>
+              <div class="person_name">Name</div>
               <div class="person_position">Executive Chairman</div>
             </div>
           </div>
