Fixed classes in HTML for images

--- a/about.html
+++ b/about.html
@@ -63,39 +63,39 @@
           <div class="developers_container">
             <div class="developer_one developer_items">
               <img
-                class="food"
+                class="web_developer_img"
                 src="https://source.unsplash.com/185x185/?human,face"
-                alt="food"
+                alt="web_developer_img"
               />
               <div class="person_name">Name</div>
-              <div class="person_position">Executive Chairman</div>
+              <div class="person_position">Web Developer</div>
             </div>
             <div class="developer_two developer_items">
               <img
-                class="food"
+                class="web_developer_img"
                 src="https://source.unsplash.com/185x185/?human,face"
-                alt="food"
+                alt="web_developer_img"
               />
               <div class="person_name">Name</div>
-              <div class="person_position">Executive Chairman</div>
+              <div class="person_position">Web Developer</div>
             </div>
             <div class="developer_three developer_items">
               <img
-                class="food"
+                class="web_developer_img"
                 src="https://source.unsplash.com/185x185/?human,face"
-                alt="food"
+                alt="web_developer_img"
               />
               <div class="person_name">Name</div>
-              <div class="person_position">Executive Chairman</div>
+              <div class="person_position">Web Developer</div>
             </div>
             <div class="developer_four developer_items">
               <img
-                class="food"
+                class="web_developer_img"
                 src="https://source.unsplash.com/185x185/?human,face"
-                alt="food"
+                alt="web_developer_img"
               />
               <div class="person_name">Name</div>
-              <div class="person_position">Executive Chairman</div>
+              <div class="person_position">Web Developer</div>
             </div>
           </div>
         </div>
