Added images to main page food sections

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <div class="solutions all_items_first_cont">
             <img
               class="food"
-              src="https://source.unsplash.com/500x500/?food,cooking"
+              src="https://source.unsplash.com/500x500/?food,solution"
               alt="food"
             />
             <h3 class="h3_style">Solution</h3>
@@ -72,11 +72,7 @@
             <a href="#" class="cta_text">Browse solution →</a>
           </div>
           <div class="fresh_ideas all_items_first_cont">
-            <img
-              class="food"
-              src="https://source.unsplash.com/500x499/?food,cooking"
-              alt="food"
-            />
+            <img class="food" src="/img/fleshIdea.jpg" alt="orange" />
 
             <h3 class="h3_style">Fresh ideas</h3>
             <p>
@@ -88,11 +84,7 @@
           </div>
 
           <div class="get_inspired all_items_first_cont">
-            <img
-              class="food"
-              src="https://source.unsplash.com/500x498/?food,cooking"
-              alt="food"
-            />
+            <img class="food" src="/img/getInspired.jpg" alt="cake" />
 
             <h3 class="h3_style">Get inspired</h3>
 
@@ -114,7 +106,7 @@
             <div>
               <img
                 class="img_sec_cont"
-                src="https://source.unsplash.com/500x500/?food,lunch"
+                src="/img/miso.jpg"
               />
             </div>
             <div class="text_container_h5">
@@ -128,7 +120,7 @@
             <div>
               <img
                 class="img_sec_cont"
-                src="https://source.unsplash.com/500x499/?food,soup"
+                src="/img/ranch.jpg"
               />
             </div>
             <div class="text_container_h5">
@@ -142,7 +134,7 @@
             <div>
               <img
                 class="img_sec_cont"
-                src="https://source.unsplash.com/500x498/?food,Chocolate"
+                src="/img/chocolateBanana.jpg"
               />
             </div>
             <div class="text_container_h5">
