Added box shadow to btn

--- a/about.html
+++ b/about.html
@@ -20,9 +20,9 @@
     <div class="container">
       <div class="navigation">
         <ul class="nav_menu_left">
-          <li><a href="#recipies">Recipies</a></li>
-          <li><a href="#solution_scroll">Solution</a></li>
-          <li><a href="#fresh_scroll">Fresh Ideas</a></li>
+          <li><a href="/#recipies">Recipies</a></li>
+          <li><a href="/#solution_scroll">Solution</a></li>
+          <li><a href="/#fresh_scroll">Fresh Ideas</a></li>
         </ul>
         <a href="/">
           <div class="logo_txt">
@@ -30,7 +30,7 @@
           </div>
         </a>
         <ul class="nav_menu_right">
-          <li><a href="#newsletter_href">Newsletter</a></li>
+          <li><a href="/#newsletter_href">Newsletter</a></li>
           <li><a href="/about.html">About</a></li>
           <li class="gold_btn sing_in"><a href="#">Sign in</a></li>
           <li class="gold_btn sing_up"><a href="#">Sign up</a></li>
