--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
       src="https://kit.fontawesome.com/a9ab182fa8.js"
       crossorigin="anonymous"
     ></script>
-    <title>Chef Gordon Portfolio</title>
+    <title>Chefs Portfolios</title>
   </head>
   <body>
     <div class="container">
       <div class="navigation">
         <ul class="nav_menu_left">
-          <li><a href="#recipies">Recipies</a></li>
+          <li><a href="/#recipies">Recipies</a></li>
           <li><a href="#solution_scroll">Solution</a></li>
           <li><a href="#fresh_scroll">Fresh Ideas</a></li>
         </ul>
@@ -59,11 +59,7 @@
 
         <div class="content_container">
           <div class="solutions all_items_first_cont">
-            <img
-              class="food"
-              src="https://source.unsplash.com/500x500/?food,solution"
-              alt="food"
-            />
+            <img class="solution_img" src="/img/solution.jpg" alt="solution" />
             <h3 class="h3_style">Solution</h3>
             <p>
               Let’s make something good together. Team up with me and get the
@@ -72,7 +68,7 @@
             <a href="#" class="cta_text">Browse solution →</a>
           </div>
           <div class="fresh_ideas all_items_first_cont">
-            <img class="food" src="/img/fleshIdea.jpg" alt="orange" />
+            <img class="orange_img" src="/img/fleshIdea.jpg" alt="orange" />
 
             <h3 class="h3_style">Fresh ideas</h3>
             <p>
@@ -84,7 +80,7 @@
           </div>
 
           <div class="get_inspired all_items_first_cont">
-            <img class="food" src="/img/getInspired.jpg" alt="cake" />
+            <img class="cake_img" src="/img/getInspired.jpg" alt="cake" />
 
             <h3 class="h3_style">Get inspired</h3>
 
@@ -104,10 +100,7 @@
         <div class="season_container">
           <div class="dish_one_container all_items_second_cont">
             <div>
-              <img
-                class="img_sec_cont"
-                src="/img/miso.jpg"
-              />
+              <img class="miso_img" src="/img/miso.jpg" alt="miso" />
             </div>
             <div class="text_container_h5">
               <h5>Creamy Miso Mushroom Soup</h5>
@@ -118,10 +111,7 @@
           </div>
           <div class="dish_two_container all_items_second_cont">
             <div>
-              <img
-                class="img_sec_cont"
-                src="/img/ranch.jpg"
-              />
+              <img class="ranch_img" src="/img/ranch.jpg" alt="ranch" />
             </div>
             <div class="text_container_h5">
               <h5>Mediterranean Ranch</h5>
@@ -133,8 +123,9 @@
           <div class="dish_three_container all_items_second_cont">
             <div>
               <img
-                class="img_sec_cont"
+                class="choco_img"
                 src="/img/chocolateBanana.jpg"
+                alt="choco"
               />
             </div>
             <div class="text_container_h5">
