Added js click for sign button newsletter

--- a/index.html
+++ b/index.html
@@ -160,7 +160,9 @@
               />
               <input type="text" placeholder="E-mail" name="mail" required />
             </div>
-            <button class="sub_btn">Sing up</button>
+            <button type="button" class="sub_btn" onclick="alert('Thank you!')">
+              Sign up
+            </button>
           </div>
         </div>
       </form>
