--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
           <li><a href="#solution_scroll">Solution</a></li>
           <li><a href="#fresh_scroll">Fresh Ideas</a></li>
         </ul>
-
-        <div class="logo_txt">
-          <!-- <h1>Chef Gordon</h1> -->
-        </div>
+        <a href="/">
+          <div class="logo_txt">
+            <!-- <h1>Chef Gordon</h1> -->
+          </div>
+        </a>
         <ul class="nav_menu_right">
           <li><a href="#newsletter_href">Newsletter</a></li>
           <li><a href="/about.html">About</a></li>
