--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
         <title>Chef Gabriel's Portfolio</title>
         <link rel="stylesheet" type="text/css" href="main.css">
         <body>
-           <div class="navigation">
+           <div class="navigation-tool">
                 <nav class="nav-bar">
                     <a href="#">Home</a>
                     <a href="#">About Us</a>
                     <a href="#">Contact</a>
                 </nav>
+            </div>
+           <div class = "center">
+               <h1>Chef Gabriel</h1>
            </div>
+
         </body>
     </head>
 </html>
