fixed CSS text image and image

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 </nav>
             </div>
            <div class = "center">
-               <h1>Chef Gabriel</h1>
+               <h1>Chef Gabriel Portfolio</h1>
            </div>
 
         </body>
