--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <DOCTYPE!>
 <html>
     <head>
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Chef Gabriel's Portfolio</title>
         <link rel="stylesheet" type="text/css" href="main.css">
         <body>
@@ -10,11 +11,11 @@
                     <a href="#">About Us</a>
                     <a href="#">Contact</a>
                 </nav>
+                <img clas="chef-img" src="images.png">
             </div>
            <div class = "center">
                <h1>Chef Gabriel Portfolio</h1>
            </div>
-
         </body>
     </head>
 </html>
